--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,55 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.titles{
+  display: flex;
+  font-size: 10px;
+  
+
+  width: 40%;
+}
+.titles h1{
+  margin: 10px 25px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+.formlist {
+
+  display: flex;
+  align-items: center;
+  color: #fff;
+
+}
+.formlist button{
+  min-width: 70px;
+  padding: 0;
+ 
+}
+.formlist h1{
+  margin: 0 10px;
+  font-size: 20px;
+}
+.dm {
+  
+  padding: 0 40px;
+}
+.cm{
+  padding: 0 50px;
+}
+
+input{
+  height: 30px;
+  border-radius: 5px ;
+  text-decoration: none;
+  padding: 0 0 0 10px;
+  border: none;
+}
+input:active{
+  border: none;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #164938;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,17 +58,4 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
